--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <junit.version>5.3.2</junit.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
+        <org.mapstruct.version>1.3.0.Final</org.mapstruct.version>
     </properties>
 
 
@@ -24,6 +25,7 @@
         <module>jpa-entities</module>
         <module>jaxb-api</module>
         <module>web-app</module>
+        <module>map-struct</module>
     </modules>
 
 
