--- a/jaxb-api/pom.xml
+++ b/jaxb-api/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>guru.springframework</groupId>
         <artifactId>modules-maven</artifactId>
-        <version>1.0</version>
+        <version>${revision}</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
