--- a/jpa-entities/pom.xml
+++ b/jpa-entities/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>modules-maven</artifactId>
         <groupId>guru.springframework</groupId>
-        <version>1.0</version>
+        <version>${revision}</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
