--- a/map-struct/pom.xml
+++ b/map-struct/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>modules-maven</artifactId>
         <groupId>guru.springframework</groupId>
-        <version>1.0</version>
+        <version>${revision}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -15,12 +15,12 @@
         <dependency>
             <groupId>guru.springframework</groupId>
             <artifactId>jaxb-api</artifactId>
-            <version>1.0</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>guru.springframework</groupId>
             <artifactId>jpa-entities</artifactId>
-            <version>1.0</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>org.mapstruct</groupId>
