--- a/pom.xml
+++ b/pom.xml
@@ -7,10 +7,11 @@
     <groupId>guru.springframework</groupId>
     <artifactId>modules-maven</artifactId>
     <packaging>pom</packaging>
-    <version>1.0</version>
+    <version>${revision}</version>
 
 
     <properties>
+        <revision>1.0</revision>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>8</java.version>
