--- a/jpa-entities/pom.xml
+++ b/jpa-entities/pom.xml
@@ -16,12 +16,11 @@
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
-            <version>5.3.7.Final</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.6</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
