--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
 
     <properties>
-        <revision>1.2</revision>
+        <revision>1.3</revision>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>8</java.version>
@@ -67,7 +67,7 @@
 
     <profiles>
         <profile>
-            <id>packagecluod</id>
+            <id>packagecloud</id>
             <distributionManagement>
                 <repository>
                     <id>packagecloud.releases</id>
@@ -78,9 +78,20 @@
                     <url>packagecloud+https://packagecloud.io/michal-asoft/snapshots</url>
                 </snapshotRepository>
             </distributionManagement>
-            <activation>
-                <activeByDefault>true</activeByDefault>
-            </activation>
+
+        </profile>
+        <profile>
+            <id>nexus</id>
+            <distributionManagement>
+                <repository>
+                    <id>nexus-release</id>
+                    <url>http://localhost:8081/repository/nexus-release/</url>
+                </repository>
+                <snapshotRepository>
+                    <id>nexus-snapshot</id>
+                    <url>http://localhost:8081/repository/nexus-snapshot/</url>
+                </snapshotRepository>
+            </distributionManagement>
         </profile>
     </profiles>
 
